--- a/views/maps_2path.ejs
+++ b/views/maps_2path.ejs
@@ -342,7 +342,7 @@
                             <div class="card-header"><b>Perspective</b></div>
                             <div class="card-body">
 
-                                <p class="card-text">According to the Uganda Bureau of Statistics, Ugandan children have to walk an average of 12km a day for the opportunity to get an education. This would have been their trek, <b>soley for eductation</b>, over the past 3 months. </p>
+                                <p class="card-text">According to the Uganda Bureau of Statistics, Ugandan children have to walk an average of 12km a day for the opportunity to get an education. This would have been their trek, <b>soley for education</b>, over the past 3 months. </p>
                             </div>
                         </div>
                     </div>
