Remove unnecessary comments, corrects typo on maps_2path.ejs

--- a/views/maps_2path.ejs
+++ b/views/maps_2path.ejs
@@ -14,25 +14,6 @@
 
     <script>
         var map;
-        console.log("hello");
-
-        // so that browser location prompt can be toggled after accepted - for testing purposes
-        // if (navigator.geolocation) {
-        //     navigator.geolocation.getCurrentPosition(displayMaps, error);
-        // } else {
-        //     error('Geolocation not supported on this browser.')
-        // }
-
-        // function initMaps(){
-        //     var map1ID = 'map1';
-        //     var map2ID = 'map2';
-
-        //     // // dispay user and uganda child destintaion on seperate maps
-        //     // displaySeperately(map1ID, map2ID);
-
-        //     // // layer uganda child destination on passed map ID
-        //     // // layerMaps(map1ID);
-        // }
 
         function initMaps(){
             // post('/userLocation', {lat : position.coords.latitude, long : position.coords.longitude});
@@ -342,7 +323,7 @@
                             <div class="card-header"><b>Perspective</b></div>
                             <div class="card-body">
 
-                                <p class="card-text">According to the Uganda Bureau of Statistics, Ugandan children have to walk an average of 12km a day for the opportunity to get an education. This would have been their trek, <b>soley for eductation</b>, over the past 3 months. </p>
+                                <p class="card-text">According to the Ugandan Bureau of Statistics, Ugandan children have to walk an average of 12km a day for the opportunity to get an education. This would have been their trek, <b>solely for education</b>, over the past 3 months. </p>
                             </div>
                         </div>
                     </div>
