--- a/views/maps_2path.ejs
+++ b/views/maps_2path.ejs
@@ -14,57 +14,30 @@
 
     <script>
         var map;
-        console.log("hello");
-
-        // so that browser location prompt can be toggled after accepted - for testing purposes
-        // if (navigator.geolocation) {
-        //     navigator.geolocation.getCurrentPosition(displayMaps, error);
-        // } else {
-        //     error('Geolocation not supported on this browser.')
-        // }
-
-        // function initMaps(){
-        //     var map1ID = 'map1';
-        //     var map2ID = 'map2';
-
-        //     // // dispay user and uganda child destintaion on seperate maps
-        //     // displaySeperately(map1ID, map2ID);
-
-        //     // // layer uganda child destination on passed map ID
-        //     // // layerMaps(map1ID);
-        // }
-
         function initMaps(){
             // post('/userLocation', {lat : position.coords.latitude, long : position.coords.longitude});
-
             initMap1();
             initMap2();
         }
-
         // HAD TO COMMENT THIS OUT, MAPS WERE NOT LOADING
         /*function layerMaps(map1ID){
             initMap1();
             layerMap2();
         }*/
-
         function initMap1(){
             var destination = "<%=user_destination%>";
             var markerArray1 = [];
             // Instantiate a directions service.
             var directionsService1 = new google.maps.DirectionsService;
-
             //Create a map and center it on user location from app.js
             map = new google.maps.Map(document.getElementById('map1'), {
                 zoom: 13,
                 center: {lat: <%=userLat%>, lng: <%=userLong%>}
             });
-
             // Create a renderer for directions and bind it to the map.
             var directionsDisplay1 = new google.maps.DirectionsRenderer({map: map});
-
             // Instantiate an info window to hold step text.
             var stepDisplay1 = new google.maps.InfoWindow;
-
             // Display the route between the initial start and end selections.
             calculateAndDisplayRoute(
                 directionsDisplay1,
@@ -75,26 +48,20 @@
                 destination
             );
         }
-
         function initMap2(position){
             var destination = "<%=ugandaChild_destination%>";
             var markerArray2 = [];
-
             // Instantiate a directions service.
             var directionsService2 = new google.maps.DirectionsService;
-
             //Create a new map and center on user location
             map = new google.maps.Map(document.getElementById('map2'), {
                 zoom: 13,
                 center: {lat: <%=userLat%>, lng: <%=userLong%>}
             });
-
             // Create a renderer for directions and bind it to the map.
             var directionsDisplay2 = new google.maps.DirectionsRenderer({map: map});
-
             // Instantiate an info window to hold step text.
             var stepDisplay2 = new google.maps.InfoWindow;
-
             // Display the route between the initial start and end selections.
             calculateAndDisplayRoute(
                 directionsDisplay2,
@@ -105,20 +72,15 @@
                 destination
             );
         }
-
         function layerMap2(){
             var destination = "<%=ugandaChild_destination%>";
             var markerArray2 = [];
-
             // Instantiate a directions service.
             var directionsService2 = new google.maps.DirectionsService;
-
             // add second direction display on top of existing map
             var directionsDisplay2 = new google.maps.DirectionsRenderer({map: map});
-
             // Instantiate an info window to hold step text.
             var stepDisplay2 = new google.maps.InfoWindow;
-
             // Display the route between the initial start and end selections.
             calculateAndDisplayRoute(
                 directionsDisplay2,
@@ -129,7 +91,6 @@
                 destination
             );
         }
-
         function calculateAndDisplayRoute(directionsDisplay, directionsService,
             markerArray, stepDisplay, map, destination) {
           console.log(map);
@@ -137,7 +98,6 @@
           for (var i = 0; i < markerArray.length; i++) {
             markerArray[i].setMap(null);
           }
-
           // Retrieve the start and end locations and create a DirectionsRequest using
           // WALKING directions.
           directionsService.route({
@@ -160,7 +120,6 @@
             }
           });
         }
-
         function showSteps(directionResult, markerArray, stepDisplay, map) {
           // For each step, place a marker, and add the text to the marker's infowindow.
           // Also attach the marker to an array so we can keep track of it and remove it
@@ -174,7 +133,6 @@
                 stepDisplay, marker, myRoute.steps[i].instructions, map);
           }
         }
-
         function attachInstructionText(stepDisplay, marker, text, map) {
           google.maps.event.addListener(marker, 'click', function() {
             // Open an info window when the marker is clicked on, containing the text
@@ -183,7 +141,6 @@
             stepDisplay.open(map, marker);
           });
         }
-
     </script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -214,15 +171,12 @@
           #map1,#map2 {
             height: 300px;
           }
-
           h2{
             margin-bottom: 30px;
           }
-
           .presentation-title{
             margin-bottom: 131px;
           }
-
     </style>
 </head>
 
@@ -341,8 +295,7 @@
                         <div class="card">
                             <div class="card-header"><b>Perspective</b></div>
                             <div class="card-body">
-
-                                <p class="card-text">According to the Uganda Bureau of Statistics, Ugandan children have to walk an average of 12km a day for the opportunity to get an education. This would have been their trek, <b>soley for education</b>, over the past 3 months. </p>
+                                <p class="card-text">According to the Ugandan Bureau of Statistics, Ugandan children have to walk an average of 12km a day for the opportunity to get an education. This would have been their trek, <b>solely for education</b>, over the past 3 months. </p>
                             </div>
                         </div>
                     </div>
@@ -374,7 +327,6 @@
 <script type="text/javascript">
     $(window).scroll(function() {
         var scroll = $(window).scrollTop();
-
         if (scroll >= 10) {
             $("#navbar").removeClass("navbar-transparent");
         } else {
