now redundant, index.js fetches user location after clicking button

--- a/views/getUserLocation.ejs
+++ b/views/getUserLocation.ejs
@@ -51,7 +51,7 @@
         }
     </script>
 
-    <script type="text/javascript" async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9YrkTByrWhKXp8wNIQ5w6IgoiCD2ae0w&libraries=drawing"></script>
+<!--     <script type="text/javascript" async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9YrkTByrWhKXp8wNIQ5w6IgoiCD2ae0w&libraries=drawing"></script> -->
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
