removed API keys from code

--- a/views/map_test_walking.ejs
+++ b/views/map_test_walking.ejs
@@ -45,7 +45,7 @@
     &nbsp;
     <div id="warnings-panel"></div>
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB9b1eU1IE9Tdh0Bo8y8GMabGhMiQ-XTps&libraries=drawing&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=&libraries=drawing&callback=initMap">
     </script>
   
   </body>
